# mdbook-epub

./: Cargo.toml  README.md
src/: config.rs  errors.rs  generator.rs  lib.rs  master.css  resources.rs  utils.rs
src/resources/: resource.rs  resources.rs  retrieve.rs
tests/: footnote_epub3_example.rs  include_code_example.rs  integration_tests.rs
tests/common/: epub.rs
tests/dummy/: book.toml
tests/dummy/src/: chapter_1.md
tests/include_code_example/: book.toml
tests/include_code_example/src/: SUMMARY.md  chapter_1.md
tests/include_code_example/src/02_subdir/: chapter_2.md
