[package]
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
description = "An EPUB renderer for mdbook."
name = "mdbook-epub"
version = "0.4.29"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Michael-F-Bryan/mdbook-epub"
documentation = "https://docs.rs/mdbook-epub"
keywords = ["epub", "mdbook", "documentation"]
categories = ["command-line-interface", "development-tools"]
edition = "2021"

[package.metadata.release]
sign-commit = true

[badges]
travis-ci = { repository = "Michael-F-Bryan/mdbook-epub", branch = "master" }
maintenance = { status = "actively-developed" }

[[bin]]
name = "mdbook-epub"
doc = false

[dependencies]
epub-builder = "0.4"
#epub-builder = { path = "../epub-builder-blandger" }
#epub-builder = { git = "https://github.com/blandger/epub-builder.git", branch = "navigation_opt_fix" }
thiserror = "1.0"
anyhow = "1.0"
pulldown-cmark = "0.9"
semver = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3"
mime_guess = "2.0"
env_logger = "0.10"
log = "0.4"
#mdbook = { version = "0.4.7", default-features = false }
#mdbook = { path = "../mdBook-blandger" }
mdbook = { git = "https://github.com/blandger/mdBook.git", branch = "master" }
handlebars = "4.2"
toml = "0.5"
html_parser = "0.6.2"
url = "2.3"

[dev-dependencies]
tempdir = "0.3.7"
epub = "1.2"
serial_test = "0.5"
